# pet_adoption_booking_system

./: .gitignore  CUserssujaifiles_list.txt  MANIFEST.in  README.md  pyproject.toml
pet_adoption_booking/: MANIFEST.in  README.md  api.py  hooks.py  modules.txt  patches.txt  setup.py  tasks.py
pet_adoption_booking.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pet_adoption_booking/doctype/: __init__.py
pet_adoption_booking/doctype/adopter/: adopter.json  adopter.py
pet_adoption_booking/doctype/adoption_booking/: adoption_booking.json  adoption_booking.py
pet_adoption_booking/doctype/adoption_settings/: adoption_settings.json  adoption_settings.py
pet_adoption_booking/doctype/pet/: pet.json  pet.py
pet_adoption_booking/doctype/pet_breed/: pet_breed.json  pet_breed.py
pet_adoption_booking/doctype/pet_category/: pet_category.json  pet_category.py
pet_adoption_booking/doctype/pet_description_sections/: pet_description_sections.json  pet_description_sections.py
pet_adoption_booking/doctype/pet_images/: pet_images.json  pet_images.py
pet_adoption_booking/doctype/pet_medical_history/: pet_medical_history.json  pet_medical_history.py
pet_adoption_booking/doctype/pet_vaccination_details/: pet_vaccination_details.json  pet_vaccination_details.py
pet_adoption_booking/pet_adoption_booking/: api.py
pet_adoption_booking/public/css/: vrm_adoption.css
pet_adoption_booking/public/js/: vrm_adoption.js
pet_adoption_booking/templates/pages/: book_adoption.html  book_adoption.py  pets.html  pets.py
pet_adoption_booking/www/: index.html  index.py
(+5 files in other folders)
