[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pet_adoption_booking"
version = "0.0.1"
description = "Frappe + ERPNext v15 based Pet Adoption Booking Application"
authors = [
    {name = "Sudhakar", email = "sudhakar@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "frappe",
    "erpnext"
]
